# vano

./: .gitignore  CMakeLists.txt  README.md  build.sh  canvas.html  index.html  layout.css  requirements.txt  script.js  settings.html
backend/: database.py  vano-api.py
backend/projects/test/pages/: test-page.md
css/: content.css  editor.css  layout.css
frontend/: index.html
frontend/css/: canvas.css  editor.css  layout.css  sidebar.css
frontend/js/: handle-state.js  projects.js  render-content.js  sidebar.js
js/: render-content.js
src/glfw-prototype/: prototype.cpp
src/render/: render_triangle.cpp  render_triangle.hpp
src/shaders/: fragment.glsl  vertex.glsl
src/util/: load_shader.cpp  load_shader.hpp
vano/: app.py
vano/static/css/: elements.css  layout.css  sidebar.css
vano/static/js/: sidebar.js
vano/templates/: add_project.html  layout.html  project_id.html  projects.html
